--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
-.container-main{
-    position: absolute;
-    right: 0;
-}
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-
+.container-main{
+    position: absolute;
+    right: 0;
+    width: 10vw;
+}
 .container{
     background-color: #fff;
     width: 350px;
 }
 
+button {
+    width: 50px;
+    height: 50px;
+}
 .container :where(.picker,header, .all-colors){
     display: flex;
     align-items: center;
